<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
android:id="@+id/name"
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:ems="10"
android:hint="@string/may_you_should_say_your_name"
android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/may_you_should_write_your_e_mail" />

    <TextView
        android:id="@+id/showE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textview"
        android:gravity="center"
        android:textSize="25sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        tools:context=".MainActivity">

        <CheckBox
            android:id="@+id/checkGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/green" />

        <CheckBox
            android:id="@+id/checkWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/white" />

        <CheckBox
            android:id="@+id/checkRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/red" />

    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="button"
        android:text="@string/button" />

    <RadioGroup
        android:id="@+id/listener"
        android:layout_width="132dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Gender?" />

        <RadioButton
            android:id="@+id/nonBi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Non Binary" />

        <RadioButton
            android:id="@+id/biZero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Binary 0" />

        <RadioButton
            android:id="@+id/biOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Binary 1" />

    </RadioGroup>

    <TextView
        android:id="@+id/listenerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>